--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -7,5 +7,21 @@
 </head>
 <body>
     <script src = "Lab1.js"></script>
+    <h1>Explanation</h1>
+    
+    <p>You can solve for the sides and acute angles of a right 
+        <br> triangle. To do this, enter the word 'triangle', after which in round 
+        <br> brackets write the value (for a correct result, enter only the correct 
+        <br> values) and the type of two data, including the following: </p>
+        <p>'leg' and 'leg'</p>
+        <p>'leg' and 'hypotenuse'</p>
+        <p>'leg' and 'adjacent angle'</p>
+        <p>'leg' and 'opposite angle'</p>
+        <p>'hypotenuse' and 'angle'</p>
+        <p>(the order of entering the arguments is not important)</p>
+        <p>'For example you can enter this: triangle(5,"hypotenuse",3,"leg");
+            <br> (But you can do it only in console (tap F12 for it))
+        </p>
+
 </body>
 </html>
