--- a/Lab2/index.html
+++ b/Lab2/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<h1>My application</h1>
-	<h2>More details in the console (F12)</h2>
+	<h2>More details in the console</h2>
 
 	<script src="SpeakHello.js"></script>
 	<script src="SpeakGoodBye.js"></script>
