--- a/Lab3/index.html
+++ b/Lab3/index.html
@@ -11,8 +11,8 @@
     <script src = "Lab3.3.js"></script>
     <script src = "Lab3.4.js"></script>
     <script src = "Lab3.5.js"></script>
-    <h1>No explanations here, because I don't want to write them</h1>
-    <h2>Everything is in the console (press F12)</h2>
+    <h1>This program outputs to the console the results of the OOP techniques I created in JS</h1>
+    <h2>To get to the console, press F12</h2>
 
 </body>
 </html>
