--- a/Lab5/index.html
+++ b/Lab5/index.html
@@ -32,6 +32,8 @@
 	<div id="modal" style="display: none;">
         <div id="modalContent">
             <p>Spiel vorbei!</p>
+            <p>Möchtest du noch einmal spielen?</p>
+            <p>Wenn ja, laden Sie die Seite neu.</p>
         </div>
     </div>
 </body>
