--- a/Lab7/snippets/catalogTitle.html
+++ b/Lab7/snippets/catalogTitle.html
@@ -1,4 +1,4 @@
 <h2 id="catalog-categories-tile" class="text-center">Catalog categories</h2>
 <div class="text-center">
-    It's the "online-store" where u "can buy" some plant food.<br><br>
+    It's the "online-store" (SPA) where u "can buy" (just see) some plant food.<br><br>
 </div>
